@@ -1,3 +1,8 @@
+2011-08-10  Maciej W. Rozycki  <macro@codesourcery.com>
+
+	* config/tc-mips.c (can_swap_branch_p): Update the comment on
+	MIPS16 fixups.
+
 2011-08-09  Chao-ying Fu  <fu@mips.com>
             Daniel Jacobowitz  <dan@codesourcery.com>
 
